--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,17 @@
 annotated-types==0.5.0
 anyio==3.7.1
+async-timeout==4.0.2
 click==8.1.6
 fastapi==0.100.1
 h11==0.14.0
 idna==3.4
+Jinja2==3.1.2
+MarkupSafe==2.1.3
 pydantic==2.1.1
 pydantic_core==2.4.0
+redis==4.6.0
 sniffio==1.3.0
 starlette==0.27.0
 typing_extensions==4.7.1
 uvicorn==0.23.1
+websockets==11.0.3
