--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ services:
     image: redis:latest
     ports:
       - 6379:6379
+    networks:
+      - redis_network
 
   app:
     build:
@@ -18,3 +20,11 @@ services:
       - redis
     env_file:
       - .env
+    networks:
+      - redis_network
+      - profanity-filter_profanity_network
+
+networks:
+  redis_network:
+  profanity-filter_profanity_network:
+    external: true
