--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,13 @@ anyio==3.7.1
 async-timeout==4.0.2
 click==8.1.6
 fastapi==0.100.1
+grpcio==1.56.2
+grpcio-tools==1.56.2
 h11==0.14.0
 idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+protobuf==4.23.4
 pydantic==2.1.1
 pydantic_core==2.4.0
 redis==4.6.0
